feat: Enhance chat functionality with improved logging, multilingual support, and message formatting

--- a/src/components/Chat.module.css
+++ b/src/components/Chat.module.css
@@ -97,11 +97,13 @@
 }
 
 .messageItemUser {
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .messageItemSystem {
-  text-align: left;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .messageLabel {
